--- a/package.json
+++ b/package.json
@@ -1,26 +1,47 @@
 {
   "name": "compass-uol-frontend",
+  "author": "Otávio Bastilho",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://obeavis.github.io/compass-uol-frontend",
+  "keywords": [
+    "react",
+    "typescript",
+    "tailwind",
+    "emotion"
+  ],
   "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.2.0",
     "@types/node": "^16.11.66",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.1.3",
+    "jest": "^29.2.1",
+    "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.1.8",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +60,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.2.1",
+    "gh-pages": "^4.0.0",
+    "jest-environment-jsdom": "^29.2.1"
   }
 }
